# fb-groups-autopost

./: .gitignore  README.md  config.example.yaml  google_sheets_setup.md  pyproject.toml
src/fb_groups_poster/: browser.py  cli.py  cli_ui.py  config.py  poster.py  runner.py  sheets.py
tests/: test_cli.py  test_config.py  test_sheets.py
